--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
+    "echarts": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server":"json-server ./src/server/data.json --port 8888"
+    "server": "json-server ./src/server/data.json --port 8888"
   },
   "eslintConfig": {
     "extends": [
