--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "echarts": "^5.6.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
